apps/base/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
